opam-version: "1.2"
version: "v0.9.1"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/cinaps"
bug-reports: "https://github.com/janestreet/cinaps/issues"
dev-repo: "https://github.com/janestreet/cinaps.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "cinaps" "--root" "." "-j" jobs "@install"]
]
depends: [
  "jbuilder" {build & >= "1.0+beta2"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Trivial metaprogramming tool

Cinaps is a trivial Metaprogramming tool using the OCaml toplevel.  It
is based on the same idea as expectation tests. The user write some
OCaml code inside special comments and cinaps make sure that what
follows is what is printed by the OCaml code.
"
