opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/cinaps"
bug-reports: "https://github.com/janestreet/cinaps/issues"
dev-repo: "git+https://github.com/janestreet/cinaps.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build & >= "1.0+beta18.1"}
  "re"       {>= "1.5.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
Trivial metaprogramming tool

Cinaps is a trivial Metaprogramming tool using the OCaml toplevel.  It
is based on the same idea as expectation tests. The user write some
OCaml code inside special comments and cinaps make sure that what
follows is what is printed by the OCaml code.
"
